# ros-pkg-cookiecutter

./: .cirrus.yml  README.md  cookiecutter.json
{{ cookiecutter.pkg_name }}/: CMakeLists.txt  README.md  package.xml
